--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-virtual": "^3.13.12",
     "@tiptap/extension-link": "^3.10.5",
     "@tiptap/extension-placeholder": "^3.10.5",
     "@tiptap/pm": "^3.10.5",
@@ -76,6 +79,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.553.0",
     "next": "^16.0.1",
+    "next-auth": "^4.24.13",
     "node-oauth2-server": "^2.4.0",
     "prisma": "^6.19.0",
     "react": "^19.2.0",
@@ -88,6 +92,7 @@
     "superjson": "^2.2.5",
     "tailwind-merge": "^3.4.0",
     "typescript": "^5.9.3",
+    "web-push": "^3.6.7",
     "xml2js": "^0.6.2",
     "zod": "^4.1.12"
   },
